# opengl-tasks

./: .gitignore  CMakeLists.txt  main.cpp  shader.hpp  utils.hpp
